k8s/demo-fe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-fe-ingress
  namespace: fe
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-fe-svc
                port:
                  number: 9099
